syntax = "proto3";

package activityMatching;

service ActivityMatching {
  rpc GetLongestCommonSubsequence (LCSRequest) returns (LCSResponse) {}
}

message LCSRequest {
  string base = 1;
  repeated string compare = 2;
}

message ResponseItem {
  string activityId = 1;
  int32 longestCommonSubsequence = 2;
  bool error = 3;
}

message LCSResponse {
  map<string, ResponseItem> longestCommonSubsequence = 1;
}
